<resources>
    <string name="app_name">AppDopta</string>
    <string name="textinput_email">Correo</string>
    <string name="invalid_email">Correo Invalido</string>
    <string name="textinput_password">Contraseña</string>
    <string name="textBtn_login_btn">INICIA SESIÓN</string>
    <string name="textvwdont_have_account">¿No tienes cuenta?, Crea una aquí</string>
    <string name="textvw_recoverpassword">¿Olvidaste tu contraseña?</string>
    <string name="textloggin_in">Iniciando sesión...</string>
    <string name="txtauthentication_failed">Autenticación fallida.</string>
    <string name="login_failed">Error de inicio de sesion..</string>
    <string name="title_recoverypassword">Restablece tu contraseña</string>
    <string name="textBtn_recovery_btn">Restablecer</string>
    <string name="textBtn_cancel_btn">Cancelar</string>
    <string name="txtsending_email">Enviando correo electrónico</string>
    <string name="txtrecovery_msm">¡Revisa tu correo por favor!</string>
    <string name="txtrecovery_msmerror">Restauración fallida</string>
    <string name="texttitle_toolbarregister">Crea tu cuenta</string>
    <string name="texvwaready_have_ancout1">¿Ya tienes cuenta?,</string>
    <string name="texvwareadyancout">Inicia ahora</string>
    <string name="textinput_confirmpassword">Confirmar Contraseña</string>
    <string name="textBtn_register_btn">ÚNETE</string>
    <string name="textregistering_user">Registrando usuario...</string>
    <string name="length_password">Usa 8 o más caracteres con una combinación de letras, números y símbolos </string>
    <string name="different_passwords">Las contraseñas no coinciden</string>
    <string name="msmaceptCB">¡Para continuar con el registro debes aceptar los términos y condiciones de uso!</string>
    <string name="validate_name">Ingresa tu nombre de usuario</string>
    <string name="validate_phone">Ingresa tu número de teléfono o WhatsApp </string>
    <string name="txtregistered">Bienvenido </string>
    <string name="txtacceptthetermsandconditionsofuse1">Acepto los </string>
    <string name="txtacceptthetermsandconditionsofuse2">Términos y Condiciones de uso</string>
    <string name="txttiletoolbar_animalcommunity">Comunidad</string>
    <string name="txttiletoolbar_profileuser">Perfil</string>
    <string name="txttiletoolbar_userslist">Usuarios</string>
    <string name="txttiletoolbar_chatslist">Chats</string>
    <string name="txttiletoolbar_Notifications">Notificaciones</string>
    <string name="txttiletoolbar_Menu">Menú</string>
    <string name="txttiletoolbar_Adoption">Adopción</string>
    <string name="txttiletoolbar_Reports">Reportes</string>
    <string name="txttiletoolbar_Services">Servicios</string>
    <string name="txtsearch_homefragment">Buscar publicaciones...</string>
    <string name="txtviewprofile">Ver tu perfil</string>
    <string name="txtuploadprofile">Editar Perfil</string>
    <string name="txtpostcomunity">-Nueva publicación en la comunidad</string>
    <string name="txtpostadoption">-Nueva publicación de adopción</string>
    <string name="txtmsmalertuser">Recuerda que tu nombre e imagen de perfil de usuario solo podrán ser cambiados pasadas 24 horas a partir de la última actualización que realizaste a estos dos datos.</string>
    <string name="txtphotoprofile">Foto de perfil</string>
    <string name="updatephotoprofile">Editar foto de perfil</string>
    <string name="msmtitleupdatephotoprofile">¿Quieres cambiar tu imagen de perfil?</string>
    <string name="msmtitleupdatenameuser">¿Quieres cambiar tu nombre de usuario?</string>
    <string name="msmdescrupdatephotoprofile">Recuerda que, si la cambias deveras esperar 24 horas a partir de la actualización de tu imagen para poder realizar un nuevo cambio.</string>
    <string name="msmdescrupdatenameuser">Recuerda que, si lo cambias deveras esperar 24 horas a partir de la actualización de tu nombre de usuario para poder realizar un nuevo cambio.</string>
    <string name="txtacept">Aceptar</string>
    <string name="txtphotocover">Foto de portada</string>
    <string name="updatephotocover">Editar foto de portada</string>
    <string name="txtinfo">Información</string>
    <string name="txtnameuser">Nombre de usuario</string>
    <string name="updatenameuser">Editar nombre de usuario</string>
    <string name="updatemsmnameuser">Ingrese el nombre de usuario</string>
    <string name="updatemsmdescriptionuser">Ingrese la descripción de usuario</string>
    <string name="updatemsmphoneuser">Ingrese el teléfono de usuario</string>
    <string name="txtdescriptionuser">Descripción de usuario</string>
    <string name="updatedescriptionuser">Editar descripción</string>
    <string name="txtphoneuser">Teléfono</string>
    <string name="updatephoneuser">Editar teléfono</string>
    <string name="changePassworduser">Cambiar Contraseña</string>
    <string name="txtmsmdialogchangePassworduser">Esta función NO está disponible para los usuarios registrados a través de su cuenta de Google, ya que la autentificación se realiza a través de credenciales de la cuenta.</string>
    <string name="changeNameuser">Cambiar nombre de usuario</string>
    <string name="changeDescriptionuser">Cambiar descripción de usuario</string>
    <string name="changePhoneuser">Cambiar teléfono de usuario</string>
    <string name="msmconection">Para editar la información de tu perfil es necesario estar conectado a internet</string>
    <string name="Updatingtitle">Editar</string>
    <string name="txtupdatindate">Ingrese</string>
    <string name="Updatingbtn">Actualizar</string>
    <string name="dateupload">Ingresa el dato que deseas actualizar</string>
    <string name="Updatingtxt">Actualizado</string>
    <string name="Updatingprofilepicture">Actualizando foto de perfil</string>
    <string name="Updatingcoverphoto">Actualizando foto de portada</string>
    <string name="UpdatingName">Actualizando nombre de usuario</string>
    <string name="UpdatingDescription">Actualizando descripción de usuario</string>
    <string name="UpdatingPhone">Actualizando teléfono de usuario</string>
    <string name="UpdatingPassword">Actualizando contraseña de usuario</string>
    <string name="txtentercurrentpass">Ingresa tu contraseña actual</string>
    <string name="txtcurrentpass">Contraseña actual</string>
    <string name="txtNewpass">Nueva contraseña</string>
    <string name="txtConfNewpass">Confirmar nueva contraseña</string>
    <string name="uploadpassbtn">Cambiar</string>
    <string name="txtPasswordUpdated">Contraseña actualizada</string>
    <string name="camerapermission">Cámara</string>
    <string name="gallerypermission">Galería</string>
    <string name="pickimagen">Seleccionar imagen de: </string>
    <string name="textpermissionsimagen">Habilita la cámara y el permiso de almacenamiento </string>
    <string name="textpermissionstorage">Habilita el permiso de almacenamiento </string>
    <string name="imageupdate">Imagen actualizada</string>
    <string name="imageupdateerror">Error al actualizar la imagen</string>
    <string name="imagesomeerror">Algún error ocurrió</string>
    <string name="txtsearch_usersfragment">Buscar Usuarios...</string>
    <string name="statusoff">Última vez: </string>
    <string name="Typing">Escribiendo...</string>
    <string name="Online">En línea</string>
    <string name="msmempty">No se puede enviar el mensaje vacío</string>
    <string name="userblocket">Usuario bloqueado</string>
    <string name="userunblocket">Usuario desbloqueado</string>
    <string name="userblocketfailed">Bloqueo fallido</string>
    <string name="userunblocketfailed">Desbloqueo fallido</string>
    <string name="sendImage">Enviando imagen...</string>
    <string name="Sentphoto">Te envió una foto</string>
    <string name="deletemsm">Este mensaje fue eliminado ...</string>
    <string name="txttiletoolbar_addnewpost">Crear publicación</string>
    <string name="txttiletoolbar_updatepost">Editar publicación</string>
    <string name="updatepostbtn">Guardar</string>
    <string name="uploadpostbtn">Publicar</string>
    <string name="txterrortiltepost">Ingresa el título de la publicación</string>
    <string name="txterrordescpost">Ingresa la descripción o el contenido de la publicación</string>
    <string name="txtprogresbar_updatingpost">Actualizando publicación ...</string>
    <string name="txtprogresbar_Publishingpost">Publicando...</string>
    <string name="txtpostpublished">Publicado</string>
    <string name="msmnotificationpos">agregó una publicación</string>
    <string name="titlepostdetail">Detalles de la publicación</string>
    <string name="Subjecttxt">Asunto...</string>
    <string name="sharetxt">Compartir con</string>
    <string name="txtedit">Editar</string>
    <string name="txtdelete">Eliminar</string>
    <string name="progresbardeleting">Eliminando...</string>
    <string name="deletedpost">Publicación eliminada</string>
    <string name="likebtn">Me gusta</string>
    <string name="commentbtn">Comentarios</string>
    <string name="txtnotifiliked">Le gusta tu publicación</string>
    <string name="progresbaradingcomment">Añadiendo comentario ...</string>
    <string name="txtcommentempty">El comentario está vacío</string>
    <string name="txtaddcomment">Comentario añadido</string>
    <string name="txtdeletecomment">Comentario eliminado</string>
    <string name="txtnotificomment">Comento tu publicación</string>
    <string name="txttitlelikebyactivity">Personas que reaccionaron</string>
    <string name="txttitleSettings">Ajustes</string>
    <string name="msmnotificationdesactivatepost">Las notificaciones han sido desactivadas </string>
    <string name="msmUnSubscriptionfailed">No se lograron desactivar las notificaciones</string>
    <string name="msmnotificationactivatepost">Las notificaciones han sido activadas </string>
    <string name="msmSubscriptionfailed">No se lograron activar las notificaciones</string>
    <string name="textinput_name">Nombre</string>
    <string name="textinput_descrip">Descripción</string>
    <string name="textinput_ccp">CCP</string>
    <string name="textinput_phone">Teléfono</string>
    <string name="textinput_user">Usuario</string>
    <string name="txtcontact">Contactar por medio de: </string>
    <string name="txtchatappdopta">Chat AppDopta</string>
    <string name="txtchatwhatsapp">Chat WhatsApp</string>
    <string name="txtllamada">Llamada telefónica</string>
    <string name="txtllamadapermission">¡Necesitas habilitar los permisos de teléfono para usar esta función!</string>
    <string name="psotivebtnllamadapermission">Intentar nuevamente</string>
    <string name="negativebtnllamadapermission">No gracias</string>
    <string name="txtllamadapermissionreqsettings">¡Necesitas habilitar los permisos de manera manual en los ajustes de tu dispositivo! </string>
    <string name="deletemessage">¿Estás seguro de eliminar este mensaje?</string>
    <string name="txtseen">Visto</string>
    <string name="txtselivered">Entregado</string>
    <string name="txtmessagedeleted">Mensaje eliminado</string>
    <string name="txtviewmore">Ver más...</string>
    <string name="txtviewless">Ver menos...</string>
    <string name="commentbtntxt">Comentar</string>
    <string name="compartirBtn">Compartir</string>
    <string name="titletvdetailpost">Título</string>
    <string name="txtnotification">Notificación</string>
    <string name="txttime">Tiempo</string>
    <string name="txtSettings">Ajustes</string>
    <string name="txtLogout">Cerrar sesión</string>
    <string name="txtSearch">Buscar</string>
    <string name="txtaddpost">Publicar</string>
    <string name="txthello">¡Hola!</string>
    <string name="txtmessagereportfound">¡Gracias por ayudar a este peludito en apuros!</string>
    <string name="txtmessagereportfound2">Por favor proporciona la mayor cantidad de información disponible sobre él para que pueda volver pronto a casa.</string>
</resources>