<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/txttiletoolbar_animalcommunity" />

    <item
        android:id="@+id/nav_Adoption"
        android:icon="@drawable/ic_adoption_black"
        android:title="@string/txttiletoolbar_Adoption" />

    <item
        android:id="@+id/nav_Report"
        android:icon="@drawable/ic_alert_black"
        android:title="@string/txttiletoolbar_Reports" />

    <item
        android:id="@+id/nav_Services"
        android:icon="@drawable/ic_services_dark"
        android:title="@string/txttiletoolbar_Services" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_barmore_black"
        android:title="@string/txttiletoolbar_Menu" />
</menu>