<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_withe"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txthello"
            android:textColor="@color/TextColorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtnameuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textinput_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="21sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margintopBtn_googlesign"
        android:layout_marginBottom="@dimen/margintop_nothave"
        android:background="#c9ccd1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtmessagereportfound"
        android:textColor="@color/TextColorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/txtmessagereportfound2"
        android:textColor="@color/TextColorWhite"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/perrito2" />

    <!--Button update password-->
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_okay_white"
        app:fab_colorNormal="@color/ColorgreenDark"
        app:fab_colorPressed="@color/Colorgreen" />

</LinearLayout>