<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/uPictureIv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_img" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textinput_name"
                    android:textColor="@color/TextColorBlack"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/pTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txttime" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pTitleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:gravity="center_horizontal"
                    android:text="@string/titletvdetailpost"
                    android:textColor="@color/colorPrimaryDark"
                    android:textIsSelectable="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pDescriptionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:ellipsize="end"
                    android:maxLines="7"
                    android:text="@string/textinput_descrip"
                    android:textColor="@color/TextColorBlack"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/seeMoreTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/txtviewmore"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/seeLessTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/txtviewless"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pImageIv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:fitsSystemWindows="true"
                    android:maxHeight="600dp"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/pLikesTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/likebtn"
                            android:textColor="@android:color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/pCommentsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/commentbtn"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/likeBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:drawableStart="@drawable/ic_like_black"
                            android:drawableLeft="@drawable/ic_like_black"
                            android:text="@string/likebtn" />

                        <Button
                            android:id="@+id/commentBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:drawableStart="@drawable/ic_comment_black"
                            android:drawableLeft="@drawable/ic_comment_black"
                            android:text="@string/commentbtntxt" />

                        <Button
                            android:id="@+id/shareBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:drawableStart="@drawable/ic_share_black"
                            android:drawableLeft="@drawable/ic_share_black"
                            android:text="@string/compartirBtn" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>