<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/avatarIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_default_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textinput_user"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notificationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtnotification"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txttime"
                android:textColor="@color/TextcolorGray" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>