<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/TextColorWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/dialogcloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/ColoracentDark"
                app:fab_icon="@drawable/ic_close_withe"
                app:fab_size="mini" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/changePassworduser"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/edittext_textsize_login"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/margintopBtn_googlesign"
                android:layout_marginBottom="@dimen/margintop_nothave"
                android:background="#c9ccd1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle_primary_opacy"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/txtmsmdialogchangePassworduser"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--EditText: Current/Old/Previous Input password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTLI"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bag_gray"
                    android:hint="@string/txtcurrentpass"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EditText: New Input password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordTLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTLI"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/newPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bag_gray"
                    android:hint="@string/txtNewpass"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EditText: Conf New Input password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confnewPasswordTLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTLI"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/confnewPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_bag_gray"
                    android:hint="@string/txtConfNewpass"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Button update password-->
            <Button
                android:id="@+id/updatePasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/textsize_register"
                android:text="@string/uploadpassbtn"
                android:theme="@style/RaisedButtonDark" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>